<resources>
    <string name="app_name">ShoppingList</string>

    <string name="itemname">Name</string>
    <string name="itemtags">Tags</string>
    <string name="itemprefix">Prefix</string>
    <string name="itemsuffix">Suffix</string>

    <string name="tagname">Name</string>
    <string name="tagtype">Type</string>
    <string name="tagshop">Store</string>
    <string name="tagfilter">Tag</string>

    <string name="screen_additem_addtitle">Add Item</string>
    <string name="screen_additem_edittitle">Edit Item</string>
    <string name="screen_additem_commit">Add</string>
    <string name="screen_additem_edit">Edit</string>

    <string name="screen_addtag_addtitle">Add Tag</string>
    <string name="screen_addtag_edittitle">Edit Tag</string>
    <string name="screen_addtag_commit">Add</string>
    <string name="screen_addtag_edit">Edit</string>

    <string name="screen_prefixsuffix_title">Amounts</string>
    <string name="screen_prefixsuffix_clear">Clear</string>
    <string name="screen_prefixsuffix_commit">Set</string>

    <string name="dialog_delete_item_title">Delete Item</string>
    <string name="dialog_delete_item_message">Do you wish to delete %1$s</string>
    <string name="dialog_delete_tag_title">Delete Tag</string>
    <string name="dialog_delete_tag_message">Do you wish to delete %1$s</string>
    <string name="dialog_delete_button">Delete</string>

    <string name="dialog_default_errortitle">An Error Occured</string>
    <string name="dialog_default_validationtitle">Validation Error</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="validation_fieldempty">%1$s cannot be empty. Please add a value for %1$s</string>
</resources>
