<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">
    <dk.redweb.shoppinglist.FrontEnd.NavigationBar
        android:id="@+id/navbar"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTagName"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/navbar"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp" android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edtItemName"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/tagname"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvTypeLabel"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tilTagName"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/tagtype"/>

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeLabel"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp" android:layout_marginRight="8dp">>
        <RadioButton
            android:id="@+id/rbStore"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/tagshop"/>
        <RadioButton
            android:id="@+id/rbFilter"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/tagfilter"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnCommit"
        android:layout_width="wrap_content" android:layout_height="32dp"
        android:minWidth="96dp"
        app:layout_constraintTop_toBottomOf="@id/rgType"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp" android:layout_marginRight="8dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorAccentText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/screen_addtag_commit"
    />
</android.support.constraint.ConstraintLayout>